--- a/indicador/pom.xml
+++ b/indicador/pom.xml
@@ -59,13 +59,27 @@
 			<artifactId>jsf-impl</artifactId>
 			<version>2.2.12</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
-			<version>5.3</version>
+			<version>5.2</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.primefaces.themes</groupId>
+			<artifactId>all-themes</artifactId>
+			<version>1.0.10</version>
+		</dependency>
+		
 	</dependencies>
-
+	
+	
+	<repositories>
+	<repository>
+		<id>prime-repo</id>
+		<name>PrimeFaces Maven Repository</name>
+		<url>http://repository.primefaces.org</url>
+		<layout>default</layout>
+	</repository>
+	</repositories>
 </project>
