--- a/indicador/pom.xml
+++ b/indicador/pom.xml
@@ -41,6 +41,16 @@
 			<artifactId>hibernate-core</artifactId>
 			<version>5.0.5.Final</version>
 		</dependency>
+		<dependency>
+			<groupId>org.hibernate.javax.persistence</groupId>
+			<artifactId>hibernate-jpa-2.0-api</artifactId>
+			<version>1.0.1.Final</version>
+		</dependency>
+		<dependency>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-annotations</artifactId>
+			<version>3.5.6-Final</version>
+		</dependency>
 
 		<!-- Dependencies of postgresql -->
 		<dependency>
@@ -70,16 +80,16 @@
 			<artifactId>all-themes</artifactId>
 			<version>1.0.10</version>
 		</dependency>
-		
+
 	</dependencies>
-	
-	
+
+
 	<repositories>
-	<repository>
-		<id>prime-repo</id>
-		<name>PrimeFaces Maven Repository</name>
-		<url>http://repository.primefaces.org</url>
-		<layout>default</layout>
-	</repository>
+		<repository>
+			<id>prime-repo</id>
+			<name>PrimeFaces Maven Repository</name>
+			<url>http://repository.primefaces.org</url>
+			<layout>default</layout>
+		</repository>
 	</repositories>
 </project>
