--- a/indicador/pom.xml
+++ b/indicador/pom.xml
@@ -103,6 +103,12 @@
 			<version>1.0.10</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.myfaces.tomahawk</groupId>
+			<artifactId>tomahawk20</artifactId>
+			<version>1.1.14</version>
+		</dependency>
+
 	</dependencies>
 
 
